--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,19 @@ dependencies:
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
   http: ^0.13.4
-  flutter_osm_plugin: ^0.33.0+1
   shared_preferences: ^2.0.13
   material_design_icons_flutter: ^5.0.6595
   flutter_svg: ^1.0.3
+  geolocator: ^8.2.0
+  flutter_osm_plugin: ^0.33.0+2
+  flutter_launcher_icons: ^0.9.2
+  permission_handler: ^8.3.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/1024.png"
+
 
 dev_dependencies:
   flutter_test:
