--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.scooty"
+        applicationId "com.mrsony.scooty"
         minSdkVersion flutter.minSdkVersion
         minSdkVersion 21
         targetSdkVersion 31
