--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_osm_plugin: ^0.33.0+2
   flutter_launcher_icons: ^0.9.2
   permission_handler: ^8.3.0
+  qr_code_scanner: ^0.7.0
 
 flutter_icons:
   android: true
@@ -80,6 +81,7 @@ flutter:
      - assets/images/backgroundImage.png
      - assets/images/vector.png
      - assets/images/scootyWallet.svg
+     - assets/images/electric scooter profile view 2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
