--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
-
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -46,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   permission_handler: ^8.3.0
   qr_code_scanner: ^0.7.0
+  mobile_scanner: ^1.0.0
 
 flutter_icons:
   android: true
